@@ -31,7 +31,6 @@ import static org.hisp.dhis.tracker.imports.validation.validator.ValidationUtils
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.domain.Event;
 import org.hisp.dhis.tracker.imports.programrule.ProgramRuleIssue;
@@ -55,7 +54,7 @@ class RuleEngineValidator implements Validator<Event> {
             .map(e -> e.executeRuleAction(bundle, event))
             .filter(Optional::isPresent)
             .map(Optional::get)
-            .collect(Collectors.toList());
+            .toList();
 
     addIssuesToReporter(reporter, event, programRuleIssues);
   }
