@@ -27,14 +27,13 @@
  */
 package org.hisp.dhis.tracker.imports.validation;
 
+import static org.hisp.dhis.test.utils.Assertions.assertIsEmpty;
 import static org.hisp.dhis.tracker.TrackerType.ENROLLMENT;
 import static org.hisp.dhis.tracker.TrackerType.EVENT;
 import static org.hisp.dhis.tracker.TrackerType.RELATIONSHIP;
 import static org.hisp.dhis.tracker.TrackerType.TRACKED_ENTITY;
 import static org.hisp.dhis.tracker.imports.validation.PersistablesFilter.filter;
 import static org.hisp.dhis.tracker.imports.validation.ValidationCode.E5000;
-import static org.hisp.dhis.tracker.imports.validation.ValidationCode.E5001;
-import static org.hisp.dhis.utils.Assertions.assertIsEmpty;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.mock;
@@ -48,6 +47,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.hisp.dhis.common.UID;
+import org.hisp.dhis.test.utils.Assertions;
 import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.imports.TrackerImportStrategy;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
@@ -59,7 +60,6 @@ import org.hisp.dhis.tracker.imports.domain.TrackedEntity;
 import org.hisp.dhis.tracker.imports.domain.TrackerDto;
 import org.hisp.dhis.tracker.imports.preheat.TrackerPreheat;
 import org.hisp.dhis.tracker.imports.validation.validator.AssertValidations;
-import org.hisp.dhis.utils.Assertions;
 import org.junit.jupiter.api.Test;
 
 class PersistablesFilterTest {
@@ -373,7 +373,7 @@ class PersistablesFilterTest {
             .enrollment("Ok4Fe5moc3N")
             .event("Ox1qBWsnVwE")
             .event("jNyGqnwryNi")
-            .relationship("Te3IC6TpnBB", trackedEntity("xK7H53f4Hc2"), trackedEntity("QxGbKYwChDM"))
+            .relationship("Te3IC6TpnBB", null, null)
             .build();
 
     PersistablesFilter.Result persistable =
@@ -385,177 +385,6 @@ class PersistablesFilterTest {
         () ->
             assertContainsOnly(
                 persistable, Event.class, "Qck4PQ7TMun", "Ox1qBWsnVwE", "jNyGqnwryNi"),
-        () -> assertContainsOnly(persistable, Relationship.class, "Te3IC6TpnBB"),
-        () -> assertIsEmpty(persistable.getErrors()));
-  }
-
-  @Test
-  void testDeleteInvalidTrackedEntityCannotBeDeletedButItsChildrenCan() {
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("xK7H53f4Hc2")
-            .isNotValid()
-            .enrollment("t1zaUjKgT3p")
-            .event("Qck4PQ7TMun")
-            .event("Ox1qBWsnVwE")
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertIsEmpty(persistable.get(TrackedEntity.class)),
-        () -> assertContainsOnly(persistable, Enrollment.class, "t1zaUjKgT3p"),
-        () -> assertContainsOnly(persistable, Event.class, "Qck4PQ7TMun", "Ox1qBWsnVwE"),
-        () -> assertIsEmpty(persistable.getErrors()));
-  }
-
-  @Test
-  void testDeleteOnlyReportErrorsIfItAddsNewInformation() {
-    // If entities are found to be invalid during the validation an error for the entity will
-    // already be in the
-    // validation report. Only add errors if it would not be clear why an entity cannot be
-    // persisted.
-
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("xK7H53f4Hc2")
-            .isNotValid()
-            .enrollment("t1zaUjKgT3p")
-            .isNotValid()
-            .relationship("Te3IC6TpnBB", trackedEntity("xK7H53f4Hc2"), enrollment("t1zaUjKgT3p"))
-            .isNotValid()
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertIsEmpty(persistable.get(TrackedEntity.class)),
-        () -> assertIsEmpty(persistable.get(Enrollment.class)),
-        () -> assertIsEmpty(persistable.get(Relationship.class)),
-        () -> assertIsEmpty(persistable.getErrors()));
-  }
-
-  @Test
-  void testDeleteInvalidRelationshipPreventsDeletionOfTrackedEntityAndEvent() {
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("xK7H53f4Hc2")
-            .enrollment("t1zaUjKgT3p")
-            .event("Qck4PQ7TMun")
-            .trackedEntity("QxGbKYwChDM")
-            .enrollment("Ok4Fe5moc3N")
-            .relationship("Te3IC6TpnBB", trackedEntity("xK7H53f4Hc2"), event("Qck4PQ7TMun"))
-            .isNotValid()
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertContainsOnly(persistable, TrackedEntity.class, "QxGbKYwChDM"),
-        () -> assertContainsOnly(persistable, Enrollment.class, "Ok4Fe5moc3N"),
-        () -> assertIsEmpty(persistable.get(Event.class)),
-        () -> assertIsEmpty(persistable.get(Relationship.class)),
-        () ->
-            assertHasError(
-                persistable,
-                TRACKED_ENTITY,
-                "xK7H53f4Hc2",
-                E5001,
-                "because \"relationship\" `Te3IC6TpnBB`"),
-        () ->
-            assertHasError(
-                persistable, ENROLLMENT, "t1zaUjKgT3p", E5001, "because \"event\" `Qck4PQ7TMun`"),
-        () ->
-            assertHasError(
-                persistable,
-                EVENT,
-                "Qck4PQ7TMun",
-                E5001,
-                "because \"relationship\" `Te3IC6TpnBB`"));
-  }
-
-  @Test
-  void testDeleteInvalidRelationshipPreventsDeletionOfEnrollmentAndEvent() {
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("xK7H53f4Hc2")
-            .enrollment("t1zaUjKgT3p")
-            .event("QxGbKYwChDM")
-            .event("Ox1qBWsnVwE")
-            .enrollment("Ok4Fe5moc3N")
-            .relationship("Te3IC6TpnBB", event("QxGbKYwChDM"), enrollment("t1zaUjKgT3p"))
-            .isNotValid()
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertIsEmpty(persistable.get(TrackedEntity.class)),
-        () -> assertContainsOnly(persistable, Enrollment.class, "Ok4Fe5moc3N"),
-        () -> assertContainsOnly(persistable, Event.class, "Ox1qBWsnVwE"),
-        () -> assertIsEmpty(persistable.get(Relationship.class)),
-        () ->
-            assertHasError(
-                persistable,
-                ENROLLMENT,
-                "t1zaUjKgT3p",
-                E5001,
-                "because \"relationship\" `Te3IC6TpnBB`"),
-        () ->
-            assertHasError(
-                persistable,
-                EVENT,
-                "QxGbKYwChDM",
-                E5001,
-                "because \"relationship\" `Te3IC6TpnBB`"));
-  }
-
-  @Test
-  void testDeleteValidRelationshipWithInvalidFrom() {
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("QxGbKYwChDM")
-            .trackedEntity("xK7H53f4Hc2")
-            .enrollment("t1zaUjKgT3p")
-            .isNotValid()
-            .relationship("Te3IC6TpnBB", enrollment("t1zaUjKgT3p"), trackedEntity("QxGbKYwChDM"))
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertContainsOnly(persistable, TrackedEntity.class, "QxGbKYwChDM"),
-        () -> assertIsEmpty(persistable.get(Enrollment.class)),
-        () -> assertContainsOnly(persistable, Relationship.class, "Te3IC6TpnBB"));
-  }
-
-  @Test
-  void testDeleteValidEntitiesReferencingParentsNotInPayload() {
-    Setup setup =
-        new Setup.Builder()
-            .trackedEntity("xK7H53f4Hc2")
-            .isInDB()
-            .isNotInPayload()
-            .enrollment("t1zaUjKgT3p")
-            .enrollment("Ok4Fe5moc3N")
-            .isInDB()
-            .isNotInPayload()
-            .event("Ox1qBWsnVwE")
-            .relationship("Te3IC6TpnBB", trackedEntity("xK7H53f4Hc2"), enrollment("Ok4Fe5moc3N"))
-            .build();
-
-    PersistablesFilter.Result persistable =
-        filter(setup.bundle, setup.invalidEntities, TrackerImportStrategy.DELETE);
-
-    assertAll(
-        () -> assertIsEmpty(persistable.get(TrackedEntity.class)),
-        () -> assertContainsOnly(persistable, Enrollment.class, "t1zaUjKgT3p"),
-        () -> assertContainsOnly(persistable, Event.class, "Ox1qBWsnVwE"),
         () -> assertContainsOnly(persistable, Relationship.class, "Te3IC6TpnBB"),
         () -> assertIsEmpty(persistable.getErrors()));
   }
@@ -575,7 +404,7 @@ class PersistablesFilterTest {
   private static class Setup {
     private final TrackerBundle bundle;
 
-    private final EnumMap<TrackerType, Set<String>> invalidEntities;
+    private final EnumMap<TrackerType, Set<UID>> invalidEntities;
 
     /**
      * Setup builds the arguments for calling {@link PersistablesFilter#filter(TrackerBundle,
@@ -625,7 +454,7 @@ class PersistablesFilterTest {
        */
       Builder trackedEntity(String uid) {
         Entity<TrackedEntity> entity =
-            new Entity<>(TrackedEntity.builder().trackedEntity(uid).build());
+            new Entity<>(TrackedEntity.builder().trackedEntity(UID.of(uid)).build());
         this.trackedEntities.add(entity);
         current = entity;
         currentTrackedEntity = entity;
@@ -644,18 +473,17 @@ class PersistablesFilterTest {
        * @return builder
        */
       Builder enrollment(String uid) {
-        Entity<Enrollment> entity = enrollment(uid, currentTrackedEntity);
+        Entity<Enrollment> entity = enrollment(UID.of(uid), currentTrackedEntity);
         this.enrollments.add(entity);
         current = entity;
         currentEnrollment = entity;
         return this;
       }
 
-      private static Entity<Enrollment> enrollment(String uid, Entity<TrackedEntity> parent) {
+      private static Entity<Enrollment> enrollment(UID uid, Entity<TrackedEntity> parent) {
         // set child/parent links
         Enrollment enrollment =
             Enrollment.builder().enrollment(uid).trackedEntity(parent.entity.getUid()).build();
-        parent.entity.getEnrollments().add(enrollment);
         return new Entity<>(enrollment);
       }
 
@@ -671,18 +499,17 @@ class PersistablesFilterTest {
        * @return builder
        */
       Builder event(String uid) {
-        Entity<Event> entity = event(uid, currentEnrollment);
+        Entity<Event> entity = event(UID.of(uid), currentEnrollment);
         this.events.add(entity);
         current = entity;
         return this;
       }
 
-      private static Entity<Event> event(String uid, Entity<Enrollment> parent) {
+      private static Entity<Event> event(UID uid, Entity<Enrollment> parent) {
         // set child/parent links only if the event has a parent. Events in an event program have no
         // enrollment.
         // They do have a "fake" enrollment (a default program) but it's not set on the event DTO.
         Event event = Event.builder().event(uid).enrollment(parent.entity.getUid()).build();
-        parent.entity.getEvents().add(event);
         return new Entity<>(event);
       }
 
@@ -703,7 +530,7 @@ class PersistablesFilterTest {
        */
       Builder relationship(String uid, RelationshipItem from, RelationshipItem to) {
         Relationship relationship =
-            Relationship.builder().relationship(uid).from(from).to(to).build();
+            Relationship.builder().relationship(UID.of(uid)).from(from).to(to).build();
         Entity<Relationship> entity = new Entity<>(relationship);
         this.relationships.add(entity);
         current = entity;
@@ -719,8 +546,7 @@ class PersistablesFilterTest {
         bundle.setEvents(toEntitiesInPayload(events));
         bundle.setRelationships(toEntitiesInPayload(relationships));
 
-        EnumMap<TrackerType, Set<String>> invalidEntities =
-            PersistablesFilterTest.invalidEntities();
+        EnumMap<TrackerType, Set<UID>> invalidEntities = PersistablesFilterTest.invalidEntities();
         invalidEntities.get(TRACKED_ENTITY).addAll(invalid(trackedEntities));
         invalidEntities.get(ENROLLMENT).addAll(invalid(enrollments));
         invalidEntities.get(EVENT).addAll(invalid(events));
@@ -735,13 +561,10 @@ class PersistablesFilterTest {
       }
 
       private <T extends TrackerDto> List<T> toEntitiesInPayload(List<Entity<T>> entities) {
-        return entities.stream()
-            .filter(e -> e.isInPayload)
-            .map(e -> e.entity)
-            .collect(Collectors.toList());
+        return entities.stream().filter(e -> e.isInPayload).map(e -> e.entity).toList();
       }
 
-      private <T extends TrackerDto> Set<String> invalid(List<Entity<T>> entities) {
+      private <T extends TrackerDto> Set<UID> invalid(List<Entity<T>> entities) {
         return entities.stream()
             .filter(e -> !e.valid)
             .map(e -> e.entity.getUid())
@@ -797,18 +620,18 @@ class PersistablesFilterTest {
   }
 
   private static RelationshipItem trackedEntity(String uid) {
-    return RelationshipItem.builder().trackedEntity(uid).build();
+    return RelationshipItem.builder().trackedEntity(UID.of(uid)).build();
   }
 
   private static RelationshipItem enrollment(String uid) {
-    return RelationshipItem.builder().enrollment(uid).build();
+    return RelationshipItem.builder().enrollment(UID.of(uid)).build();
   }
 
   private static RelationshipItem event(String uid) {
-    return RelationshipItem.builder().event(uid).build();
+    return RelationshipItem.builder().event(UID.of(uid)).build();
   }
 
-  private static EnumMap<TrackerType, Set<String>> invalidEntities() {
+  private static EnumMap<TrackerType, Set<UID>> invalidEntities() {
     return new EnumMap<>(
         Map.of(
             TRACKED_ENTITY, new HashSet<>(),
@@ -819,12 +642,12 @@ class PersistablesFilterTest {
 
   private static <T extends TrackerDto> void assertContainsOnly(
       PersistablesFilter.Result persistable, Class<T> type, String... uid) {
-    Assertions.assertContainsOnly(List.of(uid), persistableUids(persistable, type));
+    Assertions.assertContainsOnly(UID.of(uid), persistableUids(persistable, type));
   }
 
-  private static <T extends TrackerDto> List<String> persistableUids(
+  private static <T extends TrackerDto> List<UID> persistableUids(
       PersistablesFilter.Result persistable, Class<T> type) {
-    return persistable.get(type).stream().map(TrackerDto::getUid).collect(Collectors.toList());
+    return persistable.get(type).stream().map(TrackerDto::getUid).toList();
   }
 
   private static void assertHasError(
@@ -844,8 +667,8 @@ class PersistablesFilterTest {
       }
 
       @Override
-      public String getUid() {
-        return uid;
+      public UID getUid() {
+        return UID.of(uid);
       }
     };
   }
